--- a/src/main.css
+++ b/src/main.css
@@ -15,3 +15,26 @@ section {
   /* width: 75%; */
   /* margin-left: 25%; */
 }
+
+.controller-container {
+    border: solid black 2px;
+    
+}
+
+.output-container {
+    border: solid red 1px;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 10px;
+}
+
+.button, .output{
+    border: solid black 1px;
+    border-radius: 4px;
+    vertical-align: middle;
+}
+
+.button:active {
+    /* border: solid red 1px; */
+    box-shadow: inset 0 0 4pt 1pt #929292;
+}
