added css for navigation

--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,7 @@
 } */
 .container {
   border: solid #6ac5ac 2px;
+  position: relative;
 }
 nav {
   border: solid #d64078 2px;
@@ -17,7 +18,7 @@ section {
 }
 
 .controller-container {
-  border: solid black 2px;
+  border: solid rgb(185, 178, 178) 1px;
 }
 
 .output-container {
@@ -41,6 +42,7 @@ section {
 .button {
   width: 38px;
   height: 38px;
+  margin: 2px;
 }
 
 .button:active {
@@ -56,4 +58,50 @@ section {
 }
 #btn-delete {
   background: url("./elements/baseline_close_black_18dp.png");
+}
+
+#footer {
+  /* background-color: sandybrown;
+  border: solid salmon 1px;
+  width : 38px;
+  height: 38px;
+  width: 100%;
+  position: fixed;
+  bottom: 0; */
+  box-shadow: 0 1px 4px 2px #929292;
+}
+
+#footer div {
+  margin-left: 38px;
+}
+
+#toggle-btn {
+  background-image: url("./elements/menu-24px.svg");
+  border: solid salmon 1px;
+  width : 38px;
+  height: 38px;
+  position: fixed;
+  bottom: 0;
+}
+
+.sidenav {
+  width: 100%; /* 100% Full-height */
+  height: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  bottom: 0; /* Stay at the top */
+  left: 0;
+  background-color: rgba(179, 175, 175, 0.5); /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  /* padding-top: 60px; Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 8px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
 }
