changed layout method

--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,11 @@
-/* html, body {
-    overflow: hidden;
-} */
+html, body {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0;
+  margin: 0;
+}
 .container {
   border: solid #6ac5ac 2px;
   position: relative;
