--- a/src/modal.css
+++ b/src/modal.css
@@ -1,30 +1,30 @@
 .modal-popup {
-    background-color: rgba(0,0,0,0.4); /* Transparent dimmed overlay */
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: table;
-    z-index: 10;
-  }
-  
-  .modal-popup.hidden {
-    display: none;
-    z-index: -1;
-  }
-  
-  .modal-popup .container {
-   display: table-cell;
-   text-align: center;
-   vertical-align: middle;
-   width: 200px;
-  }
-  
-  .modal-popup .body {
-    box-shadow: 5px 10px #888888;
-    display: inline-block;
-    background-color: white;
-    border: 1px solid black; 
-    padding: 10px;
-  }
+  background-color: rgba(0, 0, 0, 0.4); /* Transparent dimmed overlay */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: table;
+  z-index: 10;
+}
+
+.modal-popup.hidden {
+  display: none;
+  z-index: -1;
+}
+
+.modal-popup .container {
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+  width: 200px;
+}
+
+.modal-popup .body {
+  box-shadow: 1px 2px 1px 1px black;
+  display: inline-block;
+  background-color: white;
+  border: 1px solid black;
+  padding: 10px;
+}
