--- a/src/modal.css
+++ b/src/modal.css
@@ -1,10 +1,10 @@
 .modal-popup {
   background-color: rgba(0, 0, 0, 0.4); /* Transparent dimmed overlay */
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  /* height: 100%; */
   display: table;
   z-index: 10;
 }
